tests/NormalTests/paczka1/fuzzy1/12828407.err
Error in line 4: Hx7WCl A876 83,6
Error in line 6: 7g9Gzv1 S67 54,2
Error in line 15: 9nv A229 68,1
Error in line 28: 2de A229 117,85
Error in line 25: 9nv A982 38,7
